Still needs fixes, but accesibility and readablility in better shape

--- a/WeatherDashboard/wwwroot/css/homepage.css
+++ b/WeatherDashboard/wwwroot/css/homepage.css
@@ -40,22 +40,27 @@
 }
 
 .dayTemp{
-    width: 40%;
-    text-align:left;
+    width: 2em;
+    align-self: baseline;
+    justify-self: baseline;
+    text-align: left; 
 }
 
 .temperatures{
+    display: flex;
     justify-self: end;
     align-self: center;
     text-align: right;
     font-size: 1.5em;
-    width: 15%;
+    justify-content: space-between;
+    width: 20%;
 }
 
 .nightTemp{
-    width: 40%;
+    width: 2em;
     color: dimgray;
-    text-align:right;
+    justify-self: end;
+    align-self: end;
 }
 
 
